; ModuleID = '/home/carl/AnghaBench/zfs/module/zfs/extr_edonr_zfs.c_abd_checksum_edonr_tmpl_init.c'
source_filename = "/home/carl/AnghaBench/zfs/module/zfs/extr_edonr_zfs.c_abd_checksum_edonr_tmpl_init.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i32* }

@EDONR_BLOCK_SIZE = common dso_local global i32 0, align 4
@EDONR_MODE = common dso_local global i32 0, align 4
@KM_SLEEP = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i8* @abd_checksum_edonr_tmpl_init(%struct.TYPE_3__* %0) #0 {
  %2 = alloca %struct.TYPE_3__*, align 8
  %3 = alloca i8*, align 8
  %4 = alloca i8*, align 8
  %5 = alloca i64, align 8
  store %struct.TYPE_3__* %0, %struct.TYPE_3__** %2, align 8
  %6 = load i32, i32* @EDONR_BLOCK_SIZE, align 4
  %7 = zext i32 %6 to i64
  %8 = call i8* @llvm.stacksave()
  store i8* %8, i8** %4, align 8
  %9 = alloca i32, i64 %7, align 16
  store i64 %7, i64* %5, align 8
  %10 = load i32, i32* @EDONR_BLOCK_SIZE, align 4
  %11 = load i32, i32* @EDONR_MODE, align 4
  %12 = sdiv i32 %11, 8
  %13 = mul nsw i32 2, %12
  %14 = icmp eq i32 %10, %13
  %15 = zext i1 %14 to i32
  %16 = call i32 @CTASSERT(i32 %15)
  %17 = load i32, i32* @EDONR_MODE, align 4
  %18 = load %struct.TYPE_3__*, %struct.TYPE_3__** %2, align 8
  %19 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %18, i32 0, i32 0
  %20 = load i32*, i32** %19, align 8
  %21 = call i32 @EdonRHash(i32 %17, i32* %20, i32 64, i32* %9)
  %22 = load i32, i32* @EDONR_MODE, align 4
  %23 = load i32, i32* @EDONR_MODE, align 4
  %24 = load i32, i32* @EDONR_MODE, align 4
  %25 = sdiv i32 %24, 8
  %26 = sext i32 %25 to i64
  %27 = getelementptr inbounds i32, i32* %9, i64 %26
  %28 = call i32 @EdonRHash(i32 %22, i32* %9, i32 %23, i32* %27)
  %29 = load i32, i32* @KM_SLEEP, align 4
  %30 = call i8* @kmem_zalloc(i32 1, i32 %29)
  store i8* %30, i8** %3, align 8
  %31 = load i8*, i8** %3, align 8
  %32 = load i32, i32* @EDONR_MODE, align 4
  %33 = call i32 @EdonRInit(i8* %31, i32 %32)
  %34 = load i8*, i8** %3, align 8
  %35 = mul nuw i64 4, %7
  %36 = mul i64 %35, 8
  %37 = trunc i64 %36 to i32
  %38 = call i32 @EdonRUpdate(i8* %34, i32* %9, i32 %37)
  %39 = load i8*, i8** %3, align 8
  %40 = load i8*, i8** %4, align 8
  call void @llvm.stackrestore(i8* %40)
  ret i8* %39
}

; Function Attrs: nounwind
declare i8* @llvm.stacksave() #1

declare dso_local i32 @CTASSERT(i32) #2

declare dso_local i32 @EdonRHash(i32, i32*, i32, i32*) #2

declare dso_local i8* @kmem_zalloc(i32, i32) #2

declare dso_local i32 @EdonRInit(i8*, i32) #2

declare dso_local i32 @EdonRUpdate(i8*, i32*, i32) #2

; Function Attrs: nounwind
declare void @llvm.stackrestore(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
